stateDiagram-v2
    %% L++ State Diagram: TLAPS Seal Certifier
    [*] --> idle
    idle --> loading : CERTIFY
    loading --> auditing : AUTO [error is None]
    auditing --> generating_tla : AUTO [blueprint is not None && error is None]
    generating_tla --> tlc_verifying : AUTO [trinityAudit is not None an... && flangeAudit is not None and... && error is None]
    tlc_verifying --> tlc_verified : AUTO [tlaSpec is not None && error is None]
    tlc_verified --> tlaps_proving : PROVE [tlcResult is not None and t...]
    tlaps_proving --> certified : AUTO [error is None]
    tlc_verified --> certified : SEAL_TLC [tlcResult is not None and t...]
    auditing --> rejected : AUTO [error is not None]
    tlc_verifying --> rejected : AUTO [error is not None]
    tlaps_proving --> rejected : AUTO [error is not None]
    loading --> idle : RESET
    auditing --> idle : RESET
    generating_tla --> idle : RESET
    rejected --> idle : RESET
    tlc_verifying --> idle : RESET
    tlc_verified --> idle : RESET
    certified --> idle : RESET
    tlaps_proving --> idle : RESET
    certified --> certified : VIEW [tlapsResult is not None and...]
    rejected --> [*]
    certified --> [*]